tests/NormalTests/paczka1/small_fuzzy/57546837.err
Error in line 2: cmoGS A342 84,4
Error in line 7: OK8UyZ58cz8 A931 225,1
Error in line 4: A931 S586 79,9
Error in line 10: A931 A342 16,5
